[IMP] CategoryModule : Heading and card added.
Description :
	Heading and cards code added in categoryPage.html and categoryPage.scss.

--- a/src/index.html
+++ b/src/index.html
@@ -14,6 +14,12 @@
 
   <link rel="icon" type="image/png" href="assets/icon/favicon.png" />
 
+  <!-- font Raleway -->
+  <link href="https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,100;0,200;0,300;0,400;0,500;0,531;0,600;0,700;0,800;0,900;1,531&display=swap" rel="stylesheet">
+
+  <!-- fontFamily Quicksand -->
+  <link href="https://fonts.googleapis.com/css2?family=Quicksand:wght@300;400;500;600;700&display=swap" rel="stylesheet">
+  
   <!-- add to homescreen for ios -->
   <meta name="apple-mobile-web-app-capable" content="yes" />
   <meta name="apple-mobile-web-app-status-bar-style" content="black" />
